# custom-ddns

./: .dockerignore  .gitignore  .goreleaser.yaml  Cargo.toml  Dockerfile  Dockerfile.alpine  Dockerfile.alpine.goreleaser  Dockerfile.goreleaser  README.md
.github/: release-drafter.yml
.github/workflows/: ci.yml  docker.yml  release.yml
chart/: Chart.yaml  README.md  values.yaml
chart/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  secret.yaml  serviceaccount.yaml
doc/: freebox.md  github-actions.md
src/: config.rs  lib.rs  main.rs  router.rs  utils.rs
src/dns/: cloudflare.rs  mod.rs
src/sources/: freebox.rs  mod.rs
