[package]
name = "custom-ddns"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.41", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
governor = "0.10.0"
nonzero_ext = "0.3"
tokio = { version = "1.47.0", features = ["full"] }
async-trait = "0.1.88"
reqwest = { version = "0.12.22", features = ["json", "rustls-tls"], default-features = false }
serde_yaml = "0.9.33"
anyhow = "1.0.98"
thiserror = "2.0.12"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
hmac = "0.12.1"
sha1 = "0.10.6"
hex = "0.4.3"
cloudflare = { version = "0.14.0", features = ["rustls-tls"], default-features = false }
axum = "0.8.4"
chrono = { version = "0.4.41", features = ["serde"], default-features = false }