[package]
name = "custom-ddns"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
governor = "0.10.2"
nonzero_ext = "0.3.0"
tokio = { version = "1.48.0", features = ["full"] }
async-trait = "0.1.88"
reqwest = { version = "0.12.24", features = ["json", "rustls-tls"], default-features = false }
serde_yaml = "0.9.33"
anyhow = "1.0.100"
thiserror = "2.0.17"
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
hmac = "0.12.1"
sha1 = "0.10.6"
hex = "0.4.3"
cloudflare = { version = "0.14.0", features = ["rustls-tls"], default-features = false }
axum = "0.8.7"
